--- a/src/components/global/Navigation/Navbar.module.scss
+++ b/src/components/global/Navigation/Navbar.module.scss
@@ -1,12 +1,14 @@
+@import '@styles/colors.module.scss';
+
 .container {
   max-width: 100%;
+  background-color: $primary;
+  height: 120px;
 }
 
 .logo {
   display: flex;
   margin-right: 16px;
-  font-family: monospace;
-  font-weight: 700;
   letter-spacing: 0.3rem;
   color: inherit;
   text-decoration: none;
@@ -15,6 +17,8 @@
 .navMenu {
   flex-grow: 1;
   display: flex;
+  gap: 10px;
+  margin-top: 10px;
 
   &.mobile {
     display: block;
@@ -28,4 +32,35 @@
 .menuIcon {
   display: flex;
   margin-right: 16px;
+}
+
+.card {
+  width: 300px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.MuiCardContent-root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.plantImage {
+  width: 50px;
+  height: auto;
+}
+
+.test {
+  background-color: $primary-light-beige;
+  width: 300px;
+
+  &:hover {
+    background-color: $primary-light;
+    transition: background-color 0.4s ease;
+
+  }
 }
