--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,5 +1,7 @@
-$primary: #225883;
-$primary-light: #397bb0;
+$primary: #228342;
+$primary-light: #42ad65;
+$green-navbar: #bbf1ca;
+$primary-light-beige: #fce9a8;
 $not-provided-data: #787575;
 $grey-text: #757575;
 $white: #ffffff;
