Plant card in progress + fix scss in progress

--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -2,6 +2,7 @@ $primary: #228342;
 $primary-light: #42ad65;
 $green-navbar: #bbf1ca;
 $primary-light-beige: #fce9a8;
+$plant-card-background: #429f4c;
 $not-provided-data: #787575;
 $grey-text: #757575;
 $white: #ffffff;
