--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -2,7 +2,7 @@ $primary: #228342;
 $primary-light: #42ad65;
 $green-navbar: #bbf1ca;
 $primary-light-beige: #fce9a8;
-$plant-card-background: #429f4c;
+$plant-card-background: #def3e1;
 $not-provided-data: #787575;
 $grey-text: #757575;
 $white: #ffffff;
@@ -13,7 +13,7 @@ $data-information: rgba(#000000, 0.6);
 $chips-background: #696d70;
 $list-item-border: #eeeeee;
 
-$blue-variant-dark: #2196f3;
+$blue-variant-dark: #000000;
 $blue-variant-extra-light: rgba($blue-variant-dark, 0.04);
 $blue-variant-light: rgba($blue-variant-dark, 0.08);
 $blue-variant-main: rgba($blue-variant-dark, 0.5);
