--- a/src/components/global/Navigation/Footer.module.scss
+++ b/src/components/global/Navigation/Footer.module.scss
@@ -1,10 +1,8 @@
-@import '@styles/colors.module.scss';
-
 .footerContainer {
   width: 100%;
 
   .footer {
-    background-color: #228342FF;
+    background-color: #a6debb;
     display: flex;
     justify-content: space-between;
     align-items: center;
